# Agentic_AI

./: .gitignore  README.md
GenAI_project/: GenAI_AI_Engineer_Roadmap.docx  GenAI_Cheat_Sheet.html  GenAI_Course.html  Interview_Prep_Kit.docx  README.md
GenAI_project/projects/: 01_setup_auth.md  02_gemini_hello_world.py  03_prompt_engineering.py  04_embeddings_basics.py  05_chunking.py  06_rag_inmemory.py  07_rag_vertex_vector_search.py  08_rag_bigquery_vector.py  09_function_calling.py  10_agent_langgraph.py  11_evaluation.py  12_finetuning_supervised.py  13_capstone_de_assistant.py  README.md  _config.py  requirements.txt
GenAI_project/projects/sample_docs/: gemini_cost_guide.md  llm_safety.md  rag_patterns.md  vertex_ai_overview.md
Langchain_proj/: main.py  pyproject.toml
Langchain_proj/CH-1/: LLM_call.ipynb  Messages.ipynb  basics.ipynb
company/: agent.py  app.py  assistant.py  company.db  setup_db.py  tools.py  vector_store.py
company/chroma_db/: chroma.sqlite3
company/docs/: sales_handbook.txt
company_langchain/: agent.py  app.py  tools.py  vector_store.py
company_langchain/chroma_db/: chroma.sqlite3
company_langchain/docs/: company_policy.txt
