[project]
name = "langchain-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.73.1",
    "groq>=0.4.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-core>=1.3.0",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
]
